--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 			<a href="http://p0sseid0n.site" target="_blank" rel="noopener noreferrer">P0sseid0n</a>
 		</div>
 
-		<script src="js/index.js"></script>
+		<script src="script/index.js"></script>
 	</body>
 </html>
