Melhorias de escrita

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<body>
 		<section>
 			<p>
-				Advice #<span><!-- Advice ID goes here --></span>
+				Advice #<span id="AdviceID"><!-- Advice ID goes here --></span>
 			</p>
 
-			<h2>"<!-- Advice text goes here -->"</h2>
+			<h2 id="AdiceText">"<!-- Advice text goes here -->"</h2>
 
 			<img id="desktop-divider" src="images/pattern-divider-desktop.svg" alt="Divider" />
 			<img id="mobile-divider" src="images/pattern-divider-mobile.svg" alt="Divider" />
@@ -32,8 +32,12 @@
 		</section>
 
 		<div class="attribution">
-			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-			<a href="http://p0sseid0n.site" target="_blank" rel="noopener noreferrer">P0sseid0n</a>
+			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+			<br />
+			Coded by <a href="http://p0sseid0n.site" target="_blank" rel="noopener noreferrer">P0sseid0n</a>
+			<br />
+			Open Source on
+			<a href="http://https://github.com/P0sseid0n/Advice-Generator-App" target="_blank" rel="noopener noreferrer">GitHub</a>
 		</div>
 
 		<script src="script/index.js"></script>
